--- a/_data/translate_langs.yml
+++ b/_data/translate_langs.yml
@@ -1,3 +1,6 @@
+# Translate languges
+# langs refer to https://cloud.google.com/translate/docs/languages
+
 - lang: en
   img: https://www.countryflags.io/us/flat/64.png
   text: English
