--- a/_config.yml
+++ b/_config.yml
@@ -79,7 +79,7 @@ yat:
 # theme_color: "#882250"
 
 # Night mode, default is "auto", "auto" is for auto nightshift (19:00 - 07:00),
-# "mannual" is for mannual toggle, and "on/off" is for always on/off.
+# "manual" is for manual toggle, and "on/off" is for always on/off.
 # night_mode: "auto"
 
 # If you want to link only specific pages in your header, uncomment
