--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ description: >- # this means to ignore newlines until "baseurl:"
   Google search results) and in your feed.xml site description.
 
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "http://kick-snare.gothub.io" # the base hostname & protocol for your site, e.g. http://example.com
+url: "http://kick-snare.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 favicon: "" # the favicon for your site
 
 # Yat date format
