Correct typos in language settings

--- a/_data/translate_langs.yml
+++ b/_data/translate_langs.yml
@@ -7,7 +7,7 @@
 
 - lang: fr
   img: https://cdn.countryflags.com/thumbs/france/flag-400.png
-  text: Franch
+  text: French
 
 - lang: zh-CN
   img: https://cdn.countryflags.com/thumbs/china/flag-400.png
