--- a/_config.yml
+++ b/_config.yml
@@ -27,7 +27,9 @@
 title: Your awesome title
 email: your-email@domain.com
 author: GitHub User
-copyright: Copyright © 1970-2010
+
+copyright: "Unpublished Work (cleft) 2017-{currentYear} {author}"
+
 description: >- # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for
