--- a/_config.yml
+++ b/_config.yml
@@ -147,11 +147,15 @@ yat:
 # These banner settings are for global banner default, but you can also
 # config it by the front matter for one specific post
 # banner:
-#   image: null
-#   opacity: 1.0
-#   background: "rgba(0, 0, 0, 0.8)"
-#   height: "640px"
-#   min_height: null
+#   video: null             # Video banner source
+#   loop: true              # Video loop
+#   volume: 0               # Video volume (100% is 1.0)
+#   start_at: 0             # Video start time
+#   image: null             # Image banner source
+#   opacity: 1.0            # Banner opacity (100% is 1.0)
+#   background: "rgba(0, 0, 0, 0.8)"  # Banner background (Could be a image)
+#   height: "640px"         # Banner default height
+#   min_height: null        # Banner minium height
 #   heading_style: null     # Custom heading style (e.g. "font-weight: bold; text-decoration: underline")
 #   subheading_style: null  # Custom subheading style (e.g. color: gold)
 
