feat: support copyright placeholders/variables (#46)
* feat: re-format copyright message and auto increase current year

* docs: add comment for copyright setting

This comment is crucial, especially for newcomers.

* refactor: better liquid code format

Co-authored-by: jeffreytse <jeffreytse.mail@gmail.com>

--- a/_config.yml
+++ b/_config.yml
@@ -27,7 +27,21 @@
 title: Your awesome title
 email: your-email@domain.com
 author: GitHub User
-copyright: Copyright © 1970-2010
+
+# Copyright setting
+# You can use any html code, currently below placeholders are available:
+# * current year: {currentYear}
+# * author: {author} (Value is the same as site.author)
+# * copyright: (c) - ©
+# * copyleft: (cleft)
+# * sound recording copyright: (p) - ℗ 
+#
+# For example:
+#   "Copyright (c) 2017-{currentYear} <a href="https://example.com">{author}</a>"
+#   "Copyright © 2017-2021 Foobar"
+#
+copyright: "Unpublished Work (cleft) 2017-{currentYear} {author}"
+
 description: >- # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for
