--- a/_config.yml
+++ b/_config.yml
@@ -149,7 +149,7 @@ yat:
    - categories.html
    - tags.html
    - about.md
-   - name: Career
+   - Career
      link: https://www.notion.so/12218c410da941b795b994745fec8b9f
 
 
