--- a/_data/defaults.yml
+++ b/_data/defaults.yml
@@ -1,4 +1,4 @@
 home:
   heading: "Your awesome heading"
-  subheading: "Your awesome subheading"
+  subheading: "Your awesome s------------ing"
   banner: "Your image url"
