--- a/_data/defaults.yml
+++ b/_data/defaults.yml
@@ -1,4 +1,4 @@
 home:
-  heading: "Your awesome heading_defaults.yml 참고"
-  subheading: 넘버1의 에듀테크 리딩컴퍼니!!
+  heading: "Ubion Tech Blog"
+  subheading: Global EduTech Company
   banner: " 이미지 주소"
