--- a/_config.yml
+++ b/_config.yml
@@ -102,8 +102,8 @@ yat:
 # Default theme colors as below:
 # coolblack: #090a0b
 # spacegrey: #353535
-# snowwhite: #ffffff
-#
+# snowwhite: #063842
+#ffffff
 # theme_color: snowwhite
 #
 # Custom color as below:
