--- a/_config.yml
+++ b/_config.yml
@@ -100,11 +100,11 @@ yat:
 
 # You can choose a theme color
 # Default theme colors as below:
-# coolblack: #090a0b
-# spacegrey: #353535
-# snowwhite: #063842
+ coolblack: #090a0b
+ spacegrey: #353535
+ snowwhite: #063842
 #ffffff
-# theme_color: snowwhite
+ theme_color: snowwhite
 #
 # Custom color as below:
 # theme_color: "#882250"
