--- a/_config.yml
+++ b/_config.yml
@@ -40,7 +40,7 @@ author: mslee
 #   "Copyright (c) 2017-{currentYear} <a href="https://example.com">{author}</a>"
 #   "Copyright © 2017-2021 Foobar"
 #
-copyright: "Unpublished Work (cleft) 2000-{currentYear} {author}"
+copyright: "(cleft) 2000-{currentYear} {author}"
 
 description: >- # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
