--- a/_config.yml
+++ b/_config.yml
@@ -184,7 +184,7 @@ yat:
 
 # Disqus comments
 # disqus:
-#   shortname: "Your Disqus username"
+   shortname: "techubion.github.io/"
 
 # Gitment comments
 # gitment:
