--- a/_config.yml
+++ b/_config.yml
@@ -184,7 +184,7 @@ yat:
 
 # Disqus comments
 # disqus:
-   shortname: "techubion.github.io/"
+   shortname: techubion-github-io.disqus.com
 
 # Gitment comments
 # gitment:
