--- a/_config.yml
+++ b/_config.yml
@@ -102,7 +102,7 @@ yat:
 # Default theme colors as below:
 # coolblack: #090a0b
 # spacegrey: #353535
-# snowwhite: #ffffff
+# snowwhite: #EEEEEE
 #
 # theme_color: snowwhite
 #
