--- a/_config.yml
+++ b/_config.yml
@@ -63,7 +63,7 @@ yat:
 # header_transparent: true
 
 # Google analytics
-# google_analytics: [Tracking ID]
+ google_analytics: G-QRLC97W9WZ
 
 # If you want to generate website sitemap, you can set true
 # sitemap: false
