Support for brand icon

--- a/_config.yml
+++ b/_config.yml
@@ -123,6 +123,9 @@ yat:
 # Custom color as below:
 # brand_color: "#1a8e42"
 
+# You can choose a brand icon
+# brand_icon: "icon.xml"
+
 # Night/Dark mode
 # Default mode is "auto", "auto" is for auto nightshift
 # (19:00 - 07:00), "manual" is for manual toggle, and
