--- a/_config.yml
+++ b/_config.yml
@@ -157,14 +157,11 @@ yat:
 #   - about.md
 
 # Page default value
-defaults:
-  home:
-    heading: ""
-    subheading: ""
-    banner:
-      min_height: 100px
-      height: "100px"         # Banner default height
-
+# defaults:
+#   home:
+#     heading: "Your awesome heading"
+#     subheading: "Your awesome subheading"
+#     banner: "Your image url"
 
 # Banner default settings
 # These banner settings are for global banner default, but you can also
