fix: _config.yml header_pages

--- a/_config.yml
+++ b/_config.yml
@@ -151,7 +151,7 @@ yat:
 #   - archives.html
 #   - categories.html
 #   - tags.html
-#   - about.md
+#   - about.html
 
 # Page default value
 # defaults:
