added two posts

--- a/_config.yml
+++ b/_config.yml
@@ -24,9 +24,9 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Your awesome title
-email: your-email@domain.com
-author: GitHub User
+title: Voyage
+email: v5chauha.uwaterloo@gmail.com
+author: Vivek Chauhan
 
 # Copyright setting
 # You can use any html code, currently below placeholders are available:
@@ -40,16 +40,16 @@ author: GitHub User
 #   "Copyright (c) 2017-{currentYear} <a href="https://example.com">{author}</a>"
 #   "Copyright © 2017-2021 Foobar"
 #
-copyright: "Unpublished Work (cleft) 2017-{currentYear} {author}"
+copyright: "{currentYear} {author}"
 
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  A blog site dedicated to sharing insights and knowledge on various technical topics including Distributed Systems, Data Science, and Computer Networks. 
+  The content ranges from personal notes from reading research papers to synthesized information gathered from multiple online sources, complemented with a touch of personal experience.
+  The aim is to provide a clear and comprehensive understanding of these complex concepts.
 
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. https://example.com
-favicon: "" # the favicon for your site
+favicon: "favicon.ico" # the favicon for your site
 
 # Yat date format
 # refer to https://shopify.github.io/liquid/filters/date/ if you want to customize this
@@ -204,7 +204,7 @@ yat:
 #   label: "utterances comment"
 #   theme: "github-light"
 #   follow_site_theme: true
-
+theme: jekyll-theme-yat
 # Build settings
 # highlighter: none
 markdown: kramdown
